argocd/apps/prod-k8s/1-applications/player-connect.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /console/ticket/(.+) {
          #resolver 127.0.0.11 ipv6=off valid=60;
          proxy_pass https://$arg_vmhost/ticket/$1;
          proxy_http_version 1.1;
          proxy_request_buffering off;
          proxy_buffering off;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          proxy_ssl_session_reuse on;
          proxy_read_timeout 86400s;
          proxy_send_timeout 86400s;
      }

      location ~ /connect/api2/json/nodes/(.+)/qemu/(.+)/vncwebsocket.* {
          #resolver 127.0.0.11 ipv6=off valid=60s;
          proxy_pass https://$arg_vmhost/api2/json/nodes/$1/qemu/$2/vncwebsocket?port=$arg_port&vncticket=$arg_vncticket;
          proxy_http_version 1.1;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          proxy_request_buffering off;
          proxy_buffering off;
          proxy_ssl_session_reuse on;
          proxy_read_timeout 86400s;
          proxy_send_timeout 86400s;
      }
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: player-connect
  namespace: default
spec:
  rules:
  - host: crucible.io
    http:
      paths:
      - backend:
          service:
            name: player-connect
            port:
              number: 80
        path: /console(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - <path:fortress-prod/data/shared#domain>
    secretName: <path:fortress-prod/data/shared#domain>-tls
